package com.example.writinglearner.activity;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

import com.example.writinglearner.R;

public class testActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_test);
    }
}
