@startuml

title __APP's Class Diagram__\n

  namespace com.example.writinglearner {
    class com.example.writinglearner.BuildConfig {
    }
  }
  

  namespace com.example.writinglearner {
    class com.example.writinglearner.HttpUtil {
    }
  }
  

  namespace com.example.writinglearner {
    class com.example.writinglearner.MyWritingPad {
    }
  }
  

  namespace com.example.writinglearner {
    namespace activity {
      class com.example.writinglearner.activity.MainActivity {
      }
    }
  }
  

  namespace com.example.writinglearner {
    namespace activity {
      class com.example.writinglearner.activity.testActivity {
      }
    }
  }
  

  namespace com.example.writinglearner {
    namespace entity {
      class com.example.writinglearner.entity.EachCharacter {
      }
    }
  }
  

  namespace com.example.writinglearner {
    namespace entity {
      class com.example.writinglearner.entity.EachCharacterAdapter {
      }
    }
  }
  

  namespace com.example.writinglearner {
    namespace fragment {
      class com.example.writinglearner.fragment.EmptyFragment {
      }
    }
  }
  

  namespace com.example.writinglearner {
    namespace fragment {
      class com.example.writinglearner.fragment.HistoryFragment {
      }
    }
  }
  

  namespace com.example.writinglearner {
    namespace fragment {
      class com.example.writinglearner.fragment.ProfileFragment {
      }
    }
  }
  

  namespace com.example.writinglearner {
    namespace fragment {
      class com.example.writinglearner.fragment.WritingFragment {
      }
    }
  }
  

  com.example.writinglearner.MyWritingPad -up-|> com.github.gcacace.signaturepad.views.SignaturePad
  com.example.writinglearner.activity.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.writinglearner.activity.MainActivity o-- com.example.writinglearner.fragment.HistoryFragment : historyFragment
  com.example.writinglearner.activity.MainActivity o-- com.example.writinglearner.entity.EachCharacter : learningChar
  com.example.writinglearner.activity.MainActivity o-- com.example.writinglearner.fragment.ProfileFragment : profileFragment
  com.example.writinglearner.activity.MainActivity o-- com.example.writinglearner.fragment.WritingFragment : writingFragment
  com.example.writinglearner.activity.testActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.writinglearner.entity.EachCharacterAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.writinglearner.fragment.EmptyFragment -up-|> androidx.fragment.app.Fragment
  com.example.writinglearner.fragment.HistoryFragment -up-|> androidx.fragment.app.Fragment
  com.example.writinglearner.fragment.HistoryFragment o-- com.example.writinglearner.entity.EachCharacterAdapter : adapter
  com.example.writinglearner.fragment.ProfileFragment -up-|> androidx.fragment.app.Fragment
  com.example.writinglearner.fragment.WritingFragment -up-|> androidx.fragment.app.Fragment
  com.example.writinglearner.fragment.WritingFragment o-- com.example.writinglearner.MyWritingPad : writingPad


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
